# dllm

./: pyproject.toml
dllm/core/schedulers/: kappa.py
dllm/pipelines/: __init__.py  ctmc_utils.py
dllm/pipelines/dream/models/: modeling_dream.py
dllm/pipelines/editflow/: sampler.py  trainer.py  utils.py
dllm/pipelines/oneflow/: __init__.py  sampler.py  trainer.py  utils.py
dllm/pipelines/oneflow/models/: __init__.py  oneflow_model.py
doc/oneflow/: oneflow_desig.md  oneflow_design_zh.md  oneflow_design_zh_en.md  oneflow_editflow_utils_reuse_plan_zh.md
examples/oneflow/: README.md  chat.py  pt_mm.py  pt_text.py  pt_wds_latents.py  sample.py  sample_and_decode.py  sft_mm.py
scripts/oneflow/: precompute_latents_wds.py  prepare_pt_text_dataset.py
scripts/tests/: test_ctmc_utils.py
